Adding new seasons about stark streaming integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 src.file.basePath = src/main/resources/data/inputs
+base.path.inputs = src/main/resources/data/inputs
+base.path.outputs = src/main/resources/data/outputs
+
 
 src.file.json.cars = cars/cars.json
 src.file.json.carsDates = cars/cars_dates.json
@@ -13,10 +16,56 @@ src.file.json.population = format_json/population.json
 src.file.csv.stocks = stocks/stocks.csv
 src.file.csv.numbers = format_csv/numbers.csv
 
-src.jdbc.postgres.driver = org.postgresql.Driver
-src.jdbc.postgres.url = jdbc:postgresql://localhost:15432/rtjvm
-src.jdbc.postgres.user = docker
-src.jdbc.postgres.password = docker
 
 dst.file.parquet.cars = format_parquet/cars
 dst.file.avro.cars = format_avro/cars
+
+#########################################################################
+############################  FILE STREAMING  ###########################
+#base.path.inputs = src/main/resources/data/inputs
+#
+#src.file.text.people = people-1m
+#src.file.csv.stocks = stocks
+#
+#src.file.json.cars = cars
+
+#########################################################################
+###########################  FILE CONFIGS OUT  ##########################
+base.path.checkpoints = src/main/resources/data/checkpoints
+dst.file.txt.words = words_txt/words
+dst.file.parquet.clients = clients_processed
+
+
+#########################################################################
+###########################  SOCKETS CONFIGS  ###########################
+socket.input.host = localhost
+socket.input.port_1 = 12345
+socket.output.port_1 = 12346
+#########################################################################
+#############################  KAFKA CONFIGS  ###########################
+kafka.cluster = localhost:9092
+
+kafka.topic.raw.clients = clients.raw
+kafka.topic.bronze.clients = clients.bronze
+kafka.topic.silver.clients = clients.silver
+kafka.topic.gold.clients = clients.gold
+
+kafka.topic.raw.transactions = transactions.raw
+kafka.topic.bronze.transactions = transactions.bronze
+kafka.topic.silver.transactions = transactions.silver
+kafka.topic.gold.transactions = transactions.gold
+#########################################################################
+##########################  POSTGRES CONFIGS  ###########################
+
+postgres.driver = org.postgresql.Driver
+postgres.url = jdbc:postgresql://localhost:15432/rtjvm
+postgres.user = docker
+postgres.password = docker
+
+#########################################################################
+##########################  CASSANDRA CONFIGS  ##########################
+
+cassandra.keyspace = public
+cassandra.table.cars = cars
+cassandra.table.clients = clients
+cassandra.table.transactions = transactions
